Fix: temporarily removed new squashinformr post for separate branch, edited About, extra index.Rmd file in root, edited css and added cv.pdf

--- a/themes/hugo-PaperMod/assets/css/extended/custom.css
+++ b/themes/hugo-PaperMod/assets/css/extended/custom.css
@@ -47,7 +47,6 @@ div ul li, div ol li {
 }
 
 pre {
-  border: 1px solid #ddd;
   padding: 1em;
   overflow-x: auto;
 }
